--- a/code/src/style.css
+++ b/code/src/style.css
@@ -1,6 +1,17 @@
 /* Import Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 * {
   margin: 0;
   body: 0;
+}
+
+body {
+  background-color: rgba(250, 206, 213, 0.689);
+}
+
+.container {
+  background-color: #fff;
+  display: flex;
+  border: 1px solid red;
 }
