Added some more CSS Styling

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -3,7 +3,7 @@
 
 * {
   margin: 0;
-  body: 0;
+  padding: 0;
 }
 
 body {
@@ -13,5 +13,11 @@ body {
 .container {
   background-color: #fff;
   display: flex;
-  border: 1px solid red;
+  justify-content: center;
+  align-items: center;
+  margin: 225px 150px 150px 150px;
+  border-radius: 20px;
+  height: 550px;
+  width: 1000px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
