--- a/code/src/style.css
+++ b/code/src/style.css
@@ -19,5 +19,13 @@ body {
   border-radius: 20px;
   height: 550px;
   width: 1000px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.left {
+  position: relative;
+  left: -50px;
+}
+
+.right {
 }
