CSS Styling modifications

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -19,6 +19,7 @@ img {
 }
 
 .container {
+  position: absolute;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -49,20 +50,36 @@ img {
 }
 
 .left img:first-child {
-  height: 50px;
+  /* height: 50px; */
 }
 
-.left img:nth-child(3) {
+.left carousel img:nth-child(3) {
   border-radius: 50px;
   border: 3px solid rgb(231, 47, 255);
 }
 
 .left p {
   position: relative;
-  bottom: 60px;
+  bottom: 50px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   color: rgb(103, 103, 103);
+}
+
+.dot {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.dot:first-child {
+  background-color: purple;
 }
 
 .right {
@@ -71,5 +88,18 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
+}
+
+.right .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  max-width: 300px;
+  position: absolute;
+  bottom: 200px;
+  font-family: "Poppins", sans-serif;
+  color: pink;
+  font-weight: bold;
 }
